# huggingface_candle_transformer

./: Cargo.toml  README.md
.devcontainer/: Dockerfile
examples/: run_attention.rs  run_decoder.rs  run_decoder_block.rs  run_encoder.rs  run_encoder_block.rs  run_maskedattention.rs  run_pos_embed_sin.rs  run_selfattention.rs  run_transformer.rs
src/: lib.rs
src/transformer/: add_norm.rs  decoder.rs  decoder_block.rs  encoder.rs  encoder_block.rs  masking.rs  mh_attention.rs  mh_selfattention.rs  mod.rs  pos_embedding_sin.rs  positionwise_ffn.rs  transformer.rs
