[package]
name = "huggingface_candle_transformer"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# change origin to scandisk

[dependencies]
rand_distr = "0.4.3"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3" }
